--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="parse_app_id">jadibgKgQBjKhvYdPhptYCM0C2mTWIYkXeYKhsuq</string>
     <string name="parse_client_key">AYj5VuAVO5eaCD2KTHR19BqJZiq0zA6xMMmAsj1d</string>
-    <string name="app_name">Proximate</string>
+    <string name="app_name">Trumpeter</string>
     <string name="emailAddressString">Email address</string>
     <string name="passwordString">Password</string>
     <string name="passwordGreaterString">Password (6 or more characters)</string>
@@ -13,10 +13,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="createAnAccountString">Create An Account</string>
-    <string name="errorFieldRequiredString">Error; field required.</string>
-    <string name="errorInvalidEmailString">Error; email provided is invalid.</string>
-    <string name="errorPasswordTooShortString">Error; password provided is too short.</string>
-    <string name="errorPasswordMismatchString">Error; passwords don't match.</string>
+    <string name="errorFieldRequiredString">Field required.</string>
+    <string name="errorInvalidEmailString">Email provided is invalid.</string>
+    <string name="errorPasswordTooShortString">Password provided is too short.</string>
+    <string name="errorPasswordMismatchString">Passwords don\'t match.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
