CreateAccountFragment is now CreateAccountActivity. CreateAccountFragment and related .xml deleted.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="errorPasswordMismatchString">Passwords don\'t match.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_create_account">Create an Account</string>
 
 </resources>
