--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="parse_client_key">AYj5VuAVO5eaCD2KTHR19BqJZiq0zA6xMMmAsj1d</string>
     <string name="app_name">Trumpeter</string>
     <string name="emailAddressString">Email Address</string>
+    <string name="emailAddressOrUsernameString">Email Address or Username</string>
     <string name="passwordString">Password</string>
     <string name="passwordGreaterString">Password (6+ characters)</string>
     <string name="confirmPasswordString">Confirm Password</string>
