--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,10 @@
     <string name="errorInvalidEmailString">Not an email address.</string>
     <string name="errorPasswordTooShortString">Password provided is too short.</string>
     <string name="errorPasswordMismatchString">Passwords don\'t match.</string>
+    <string name="whatsGoingOnString"><u>What\'s going on?</u></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_create_account">Create an Account</string>
+    <string name="title_activity_feed">Feed Activity</string>
 
 </resources>
