--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="title_activity_create_account">Create an Account</string>
     <string name="title_activity_feed">Feed Activity</string>
     <string name="title_activity_submit_trumpet">Submit Trumpet Activity</string>
+    <string name="title_activity_view_trumpet">View Trumpet</string>
 
 </resources>
