Many new features and bug fixes; pages now correctly refresh when new data is entered, and no longer refresh when unwanted e.g. backing from submission (close #30). When refreshing in FeedActivity, LV now scrolls smoothly to top of list  (close #32). Trumpets now display reply count info and date info (close #27, close #28). When replying, the user is now taken to the correct page after submission (ViewTrumpetActivity for trumpet that was replied to, or staying on ViewTrumpetActivity if replying to the Trumpet currently being viewed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="parse_app_id">jadibgKgQBjKhvYdPhptYCM0C2mTWIYkXeYKhsuq</string>
     <string name="parse_client_key">AYj5VuAVO5eaCD2KTHR19BqJZiq0zA6xMMmAsj1d</string>
+    <string name="facebook_app_id">116915712024040</string>
     <string name="app_name">Trumpeter</string>
     <string name="emailAddressString">Email Address</string>
     <string name="emailAddressOrUsernameString">Email Address or Username</string>
