--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_create_account">Create an Account</string>
-    <string name="title_activity_feed">Feed Activity</string>
+    <string name="title_activity_feed">The Feed</string>
     <string name="title_activity_submit_trumpet">Submit Trumpet Activity</string>
-    <string name="title_activity_view_trumpet">View Trumpet</string>
+    <string name="title_activity_view_trumpet">View a Trumpet</string>
 
 </resources>
